# time-it-rs

./: .gitignore  Cargo.toml  flake.nix  license-mit  readme.md
examples/: expand.rs
src/: lib.rs
